--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "MeleeCombatCore (Debug)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Debug Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Debug.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Debug.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -18,7 +18,7 @@
 			"name": "MeleeCombatCore (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 DebugGame Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -31,7 +31,7 @@
 			"name": "MeleeCombatCore (Development)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Development Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -44,7 +44,7 @@
 			"name": "MeleeCombatCore (Shipping)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Shipping Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -57,7 +57,7 @@
 			"name": "MeleeCombatCore (Test)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Test Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Test.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Test.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -72,7 +72,7 @@
 			"preLaunchTask": "MeleeCombatCoreEditor Win64 Debug Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
 			"args": [
-				"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
+				"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -86,7 +86,7 @@
 			"preLaunchTask": "MeleeCombatCoreEditor Win64 DebugGame Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-DebugGame.exe",
 			"args": [
-				"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
+				"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -100,7 +100,7 @@
 			"preLaunchTask": "MeleeCombatCoreEditor Win64 Development Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor.exe",
 			"args": [
-				"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
+				"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -117,7 +117,7 @@
 			"args": [
 				"-projectfiles",
 				"-vscode",
-				"-project=\"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject\"",
+				"-project=\"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject\"",
 				"-game",
 				"-engine"
 			],
