--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
 	"files.exclude": {
-		"D:/Unreal Projects/MeleeCombatCore/.vscode": true,
-		"D:/Unreal Projects/MeleeCombatCore/Content": true,
-		"D:/Unreal Projects/MeleeCombatCore/Intermediate": true
+		"C:/Users/BC/Documents/Unreal Projects/MeleeCombatCore/.git": true,
+		"C:/Users/BC/Documents/Unreal Projects/MeleeCombatCore/.vscode": true,
+		"C:/Users/BC/Documents/Unreal Projects/MeleeCombatCore/Content": true,
+		"C:/Users/BC/Documents/Unreal Projects/MeleeCombatCore/DerivedDataCache": true,
+		"C:/Users/BC/Documents/Unreal Projects/MeleeCombatCore/Intermediate": true,
+		"C:/Users/BC/Documents/Unreal Projects/MeleeCombatCore/Saved": true
 	}
 }
