Add memory and structure

--- a/Plugins/MindCore/MindCore.uplugin
+++ b/Plugins/MindCore/MindCore.uplugin
@@ -3,7 +3,7 @@
 	"Version": 1,
 	"VersionName": "0.1",
 	"FriendlyName": "MindCore",
-	"Description": "Mind contains special AI and Memory",
+	"Description": "Mind contains special AI and Remember",
 	"Category": "Other",
 	"CreatedBy": "Baihan",
 	"CreatedByURL": "",
