fix comopile bug

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,3 +49,6 @@ EditorStartupMap=/Game/Levels/Demo.Demo
 GameDefaultMap=/Game/Levels/Demo.Demo
 GlobalDefaultGameMode=/Game/Blueprints/GameMode.GameMode_C
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+FrameRateLock=PUFRL_None
+
