--- a/Plugins/MeleeCore/MeleeCore.uplugin
+++ b/Plugins/MeleeCore/MeleeCore.uplugin
@@ -18,7 +18,12 @@
 		{
 			"Name": "MeleeCore",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms" :
+            [
+                "Win64",
+                "Android"
+            ]
 		}
 	]
 }
