--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,124 +5,124 @@
 			"name": "MeleeCombatCore (Debug)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Debug Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Debug.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Debug.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "MeleeCombatCore (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 DebugGame Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "MeleeCombatCore (Development)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Development Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "MeleeCombatCore (Shipping)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Shipping Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "MeleeCombatCore (Test)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCore Win64 Test Build",
-			"program": "D:\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Test.exe",
+			"program": "C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\Binaries\\Win64\\UE4-Win64-Test.exe",
 			"args": [
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "MeleeCombatCoreEditor (Debug)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCoreEditor Win64 Debug Build",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
+			"program": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
 			"args": [
-				"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
+				"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "MeleeCombatCoreEditor (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCoreEditor Win64 DebugGame Build",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-DebugGame.exe",
+			"program": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Binaries\\Win64\\UE4Editor-Win64-DebugGame.exe",
 			"args": [
-				"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
+				"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "MeleeCombatCoreEditor (Development)",
 			"request": "launch",
 			"preLaunchTask": "MeleeCombatCoreEditor Win64 Development Build",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor.exe",
+			"program": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Binaries\\Win64\\UE4Editor.exe",
 			"args": [
-				"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
+				"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject"
 			],
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26",
 			"stopAtEntry": false,
 			"externalConsole": true,
 			"type": "cppvsdbg",
-			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
+			"visualizerFile": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Extras\\VisualStudioDebugging\\UE4.natvis"
 		},
 		{
 			"name": "Generate Project Files",
 			"type": "clr",
 			"request": "launch",
-			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\DotNET\\UnrealBuildTool.exe",
+			"program": "C:\\Program Files\\Epic Games\\UE_4.26\\Engine\\Binaries\\DotNET\\UnrealBuildTool.exe",
 			"console": "externalTerminal",
 			"args": [
 				"-projectfiles",
 				"-vscode",
-				"-project=\"D:\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject\"",
+				"-project=\"C:\\Users\\BC\\Documents\\Unreal Projects\\MeleeCombatCore\\MeleeCombatCore.uproject\"",
 				"-game",
 				"-engine"
 			],
 			"internalConsoleOptions": "openOnSessionStart",
-			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25"
+			"cwd": "C:\\Program Files\\Epic Games\\UE_4.26"
 		}
 	]
 }
