--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,4 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 MeleeCombatCore.code-workspace
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/settings.json
-.vscode/tasks.json
+.vscode/
