Mind: remove thingCompnent, Change ting type

--- a/MeleeCombatCore.uproject
+++ b/MeleeCombatCore.uproject
@@ -132,6 +132,13 @@
 				"Mac",
 				"Win64"
 			]
+		},
+		{
+			"Name": "WinDualShock",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
 		}
 	]
 }
