Fix bug fox linux

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,20 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 MeleeCombatCore.code-workspace
 .vscode/
+MeleeCombatCore.pro.user
+MeleeCombatCore.uproject
+MeleeCombatCore.workspace
+MeleeCombatCoreCodeCompletionFolders.txt
+MeleeCombatCoreCodeLitePreProcessor.txt
+MeleeCombatCoreConfig.pri
+MeleeCombatCoreDefines.pri
+MeleeCombatCoreHeader.pri
+MeleeCombatCoreIncludes.pri
+MeleeCombatCoreSource.pri
+.kdev4/Defines.txt
+.kdev4/Includes.txt
+.kdev4/MeleeCombatCore.kdev4
+CMakeLists.txt
+Makefile
+MeleeCombatCore.kdev4
+MeleeCombatCore.pro
