refactor thing and executor's data

--- a/MeleeCombatCore.uproject
+++ b/MeleeCombatCore.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{E5BD14CD-3730-44A9-871B-AA8B375899AA}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
