Fix compile bugs

--- a/MeleeCombatCore.uproject
+++ b/MeleeCombatCore.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{A66D0EB8-7CDB-4397-A83D-B58765287AC2}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -139,6 +139,18 @@
 			"SupportedTargetPlatforms": [
 				"Win64"
 			]
+		},
+		{
+			"Name": "LocationServicesBPLibrary",
+			"Enabled": false
+		},
+		{
+			"Name": "TcpMessaging",
+			"Enabled": false
+		},
+		{
+			"Name": "UdpMessaging",
+			"Enabled": false
 		}
 	]
 }
