Update project settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,3 +87,8 @@ GlobalDefaultGameMode=/Game/Blueprints/GameMode.GameMode_C
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_None
 
+
+
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+FrameTimingHint=Unspecified
+
