Update action difficulty

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/MeleeCombatCore")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/MeleeCombatCore")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MeleeCombatCoreGameModeBase")
+GenerateDefaultTimecodeFrameRate=(Numerator=60,Denominator=1)
+bSmoothFrameRate=True
+bUseFixedFrameRate=False
+FixedFrameRate=60.000000
+bGenerateDefaultTimecode=False
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -83,6 +88,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Levels/Demo.Demo
 GameDefaultMap=/Game/Levels/Demo.Demo
 GlobalDefaultGameMode=/Game/Blueprints/GameMode.GameMode_C
+bUseSplitscreen=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_None
@@ -91,4 +97,10 @@ FrameRateLock=PUFRL_None
 
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 FrameTimingHint=Unspecified
+
+[/Script/Engine.RendererSettings]
+r.ForwardShading=False
+r.ReflectionMethod=1
+r.AllowGlobalClipPlane=False
+r.GenerateMeshDistanceFields=True
 
