--- a/Plugins/MindCore/MindCore.uplugin
+++ b/Plugins/MindCore/MindCore.uplugin
@@ -5,7 +5,7 @@
 	"FriendlyName": "MindCore",
 	"Description": "Mind contains special AI and Remember",
 	"Category": "Other",
-	"CreatedBy": "Baihan",
+	"CreatedBy": "Bai Han",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
