添加StorySystem子模块

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "MindCore"]
 	path = Plugins/MindCore
 	url = git@github.com:hakuhan/MindCore.git
+[submodule "StorySystem"]
+	path = Plugins/StorySystem
+	url = git@github.com:hakuhan/StorySystem.git
